css/main.css
@import url("https://fonts.googleapis.com/css2?family=Mochiy+Pop+P+One&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Ubuntu&display=swap");

html {
  background-color: #393838;
}

main {
  text-align: center;
}

header {
  text-align: center;
  font-size: 1.5rem;
  color: #d5d4cf;
  font-family: "Mochiy Pop P One", sans-serif;
  margin: 2rem 0;
}

/* Mobile - 360px */
#player-area {
  margin-left: 1.25rem;
  margin-right: 1.25rem;
}

#audio-player {
  display: none;
}

#track-cover {
  text-align: center;
  max-width: 80%;
  box-shadow: 0 0 1.5rem #a9a9a9;
}

/* visualizer bar */
#visual svg {
  fill: #d5d4cf;
  max-width: 50%;
  text-align: center;
}
/* visualizer border  */
#Layer_1 {
  margin-bottom: -0.75rem;
}

/* visualizer bar animations */
#r-1 {
  animation: move_y 1.9s 1ms linear infinite;
}
#r-2 {
  animation: move_y 1.2s 1ms linear infinite;
}
#r-3 {
  animation: move_y 1.4s 1ms linear infinite;
}
#r-4 {
  animation: move_y 1.5s 1ms linear infinite;
}
#r-5 {
  animation: move_y 1.8s 1ms linear infinite;
}
#r-6 {
  animation: move_y 1.7s 1ms linear infinite;
}
#r-7 {
  animation: move_y 1.3s 1ms linear infinite;
}
#r-8 {
  animation: move_y 1.2s 1ms linear infinite;
}
#r-9 {
  animation: move_y 1.6s 1ms linear infinite;
}

@keyframes move_y {
  0% {
    transform: translateY(0%);
  }
  25% {
    transform: translateY(25%);
  }
  50% {
    transform: translateY(50%);
  }
  75% {
    transform: translateY(25%);
  }
  100% {
    transform: translateY(0%);
  }
}

/* song title and artist name */
#title {
  color: #d5d4cf;
  text-align: left;
  font-family: "Ubuntu", sans-serif;
  margin: 3.5rem 0rem 1.75rem 0rem;
}
#song-title {
  font-size: 1.5rem;
  font-weight: bold;
  margin: 0.5rem 0;
}
#artist {
  font-size: 1rem;
  margin: 0.25rem 0;
}

/* progress bar */
#progressBar {
  width: 100%;
}

/* song current and total timeline */
#time {
  display: flex;
  justify-content: space-between;
  color: #d5d4cf;
  font-size: 0.75rem;
  margin-top: 0.5rem;
}

/* control buttons */
#controls {
  margin: 2rem 0;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}

/* button style */
.buttons {
  border: none;
  padding: 0;
  color: #d5d4cf;
  background-color: transparent;
}

/* playlist */
#playerList-area {
  margin-left: 1.25rem;
  margin-right: 1.25rem;
}

/* hightLight the song */
.active {
  background-color: #6f6b6b;
  border-radius: 0 0.5rem 0.5rem 0;
}

.list-title {
  color: #d5d4cf;
  text-align: left;
  font-size: 1.5rem;
  text-transform: uppercase;
  font-family: "Ubuntu", sans-serif;
  margin-top: 0;
  margin-bottom: 2rem;
  border-bottom: 1px solid #d5d4cf;
}

/* song list */
#songList {
  padding: 0rem;
}

#songList li {
  display: flex;
  justify-content: space-between;
  list-style: none;
  margin-bottom: 1.25rem;
  border-bottom: 1px solid #d5d4cf;
}

.songList-cover {
  display: flex;
  justify-content: center;
  align-items: center;
}
.songList-cover img {
  width: 6rem;
  max-width: 100%;
}

.songList-text {
  margin-right: 0.75rem;
  color: #d5d4cf;
  text-align: right;
  font-family: "Ubuntu", sans-serif;
}
.songList-title {
  font-size: 1rem;
  font-weight: bold;
}
.songList-artist {
  color: #c8c6b3;
}

/* Medium web browser - 600px */
@media only screen and (min-width: 37.5rem) {
  main {
    display: flex;
    flex-direction: row;
  }

  #player-area {
    margin-left: 1.75rem;
    margin-right: 1.75rem;
    width: 100%;
  }

  #playerList-area {
    margin-left: 1.75rem;
    margin-right: 1.75rem;
    width: 100%;
  }

  #songList {
    display: flex;
    flex-direction: column;
    justify-content: flex-end;
  }

  #songList li {
    margin-bottom: 1.75rem;
  }

  /* list hover */
  #songList li:hover {
    background-color: #6f6b6b;
    border-radius: 0 0.5rem 0.5rem 0;
  }

  #list-title {
    margin-top: 0;
  }

  .songList-title {
    font-size: 1rem;
  }
}

/* Large web browser - 960px */
@media only screen and (min-width: 60rem) {
  #player-area {
    margin-left: 2.5rem;
    margin-right: 2.5rem;
  }

  #playerList-area {
    margin-left: 3rem;
    margin-right: 3rem;
    max-width: 70%;
  }

  #songList li {
    margin-bottom: 2rem;
  }
}

